[metadata]
name = tkpywidgets
version = 0.1
url = https://github.cm/bluejay65/tkpyWidgets
description = A library of more advanced widgets for tkinter made in python.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = tkinter, tkpywidgets, tk, tkw
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
install_requires =
    tk

[options.packages.find]
where=src